fix: Removes hidden overflow

--- a/css/index.css
+++ b/css/index.css
@@ -363,11 +363,6 @@ a {
 /* ============================================= */
 /*             Grid Setup                      */
 /* ============================================= */
-body {
-  height: 100vh;
-  overflow-y: hidden;
-}
-
 .container {
   display: grid;
   grid-template-rows: 100px 1fr 100px;
