--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -6,11 +6,6 @@
 
 /* ============================================= */
 
-body {
-    height: 100vh;
-    overflow-y: hidden;
-}
-
 .container {
     display: grid;
     grid-template-rows: 100px 1fr 100px;
